--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,33 +32,24 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules "directory session date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
-set -g @catppuccin_date_time_text "%H:%M:%S"
-
 # set -g @plugin "nordtheme/tmux"
+
+# tokyonigh
+set -g @tokyo-night-tmux_show_datetime 0
+
+set -g @tokyo-night-tmux_window_id_style none
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
+
+set -g @tokyo-night-tmux_show_path 1
+set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
+set -g @tokyo-night-tmux_show_music 1
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
